--- a/src/main/webapp/header.html
+++ b/src/main/webapp/header.html
@@ -6,6 +6,21 @@
            var msg = "欢迎回来, " + data.name;
            $("#span_username").html(msg);
        });
+
+        $.get("category/findAll",{},function (data) {
+            //[{cid:int,cname:String},{},{}...]
+            var lis = '<li class="nav-active"><a href="index.html">首页</a></li>';
+            //遍历数组,拼接字符串<li><a href="route_list.html">门票</a></li>
+            for(var i = 0; i < data.length; i++){
+                var li = '<li><a href="route_list.html">'+ data[i].cname +'</a></li>'
+                lis += li;
+            }
+            //拼接收藏排行榜
+            lis += '<li><a href="favoriterank.html">收藏排行榜</a></li>';
+
+            //将lis字符串,设置到ul category 中
+            $("#category").html(lis);
+        });
     });
 </script>
     <header id="header">
@@ -50,17 +65,17 @@
     <!-- 头部 end -->
      <!-- 首页导航 -->
     <div class="navitem">
-        <ul class="nav">
-            <li class="nav-active"><a href="index.html">首页</a></li>
-            <li><a href="route_list.html">门票</a></li>
-            <li><a href="route_list.html">酒店</a></li>
-            <li><a href="route_list.html">香港车票</a></li>
-            <li><a href="route_list.html">出境游</a></li>
-            <li><a href="route_list.html">国内游</a></li>
-            <li><a href="route_list.html">港澳游</a></li>
-            <li><a href="route_list.html">抱团定制</a></li>
-            <li><a href="route_list.html">全球自由行</a></li>
-            <li><a href="favoriterank.html">收藏排行榜</a></li>
+        <ul id="category" class="nav">
+            <!--<li class="nav-active"><a href="index.html">首页</a></li>-->
+            <!--<li><a href="route_list.html">门票</a></li>-->
+            <!--<li><a href="route_list.html">酒店</a></li>-->
+            <!--<li><a href="route_list.html">香港车票</a></li>-->
+            <!--<li><a href="route_list.html">出境游</a></li>-->
+            <!--<li><a href="route_list.html">国内游</a></li>-->
+            <!--<li><a href="route_list.html">港澳游</a></li>-->
+            <!--<li><a href="route_list.html">抱团定制</a></li>-->
+            <!--<li><a href="route_list.html">全球自由行</a></li>-->
+            <!--<li><a href="favoriterank.html">收藏排行榜</a></li>-->
         </ul>
     </div>
     
