--- a/src/main/webapp/header.html
+++ b/src/main/webapp/header.html
@@ -1,4 +1,5 @@
 <!-- 头部 start -->
+<script src="js/getParameter.js"></script>
 <script>
     $(function () {
         $.get("user/findOne", {}, function (data) {
@@ -7,6 +8,7 @@
             $("#span_username").html(msg);
         });
 
+        //查询分类数据
         $.get("category/findAll", {}, function (data) {
             //[{cid:int,cname:String},{},{}...]
             var lis = '<li class="nav-active"><a href="index.html">首页</a></li>';
@@ -20,6 +22,17 @@
 
             //将lis字符串,设置到ul category 中
             $("#category").html(lis);
+        });
+
+        //给搜索按钮绑定单击事件,获取搜索输入框的内容
+        $("#search-button").click(function () {
+            //线路名称
+            var rname = $("#search_input").val();
+            //alert(rname);
+            var cid = getParameter("cid");
+            // alert(cid);
+            //跳转路径
+            location.href = "http://localhost/travel/route_list.html?cid="+cid+"&rname="+rname;
         });
     });
 </script>
@@ -47,8 +60,9 @@
                 <a href="/"><img src="images/logo.jpg" alt=""></a>
             </div>
             <div class="search">
-                <input name="" type="text" placeholder="请输入路线名称" class="search_input" autocomplete="off">
-                <a href="javascript:;" class="search-button">搜索</a>
+                <input name="" id="search_input" type="text" placeholder="请输入路线名称" class="search_input"
+                       autocomplete="off">
+                <a href="javascript:;" id="search-button" class="search-button">搜索</a>
             </div>
             <div class="hottel">
                 <div class="hot_pic">
