--- a/src/main/webapp/route_list.html
+++ b/src/main/webapp/route_list.html
@@ -9,22 +9,38 @@
     <link rel="stylesheet" type="text/css" href="css/common.css">
     <link rel="stylesheet" href="css/search.css">
     <script src="js/jquery-3.3.1.js"></script>
+    <script src="js/getParameter.js"></script>
 
     <script>
         $(function () {
+            //获取cid
+            /*
             var search = location.search;
             //alert(search);//?id=1
             //切割字符串,拿到第二个值
             var cid = search.split("=")[1];
+            */
+            var cid = getParameter("cid");
+
+            //获取rname的参数值
+            var rname = getParameter("rname");
+            //如果rname不为空,对其中的汉字解码
+            if (rname){
+                //汉字解码方法
+                rname = window.decodeURIComponent(rname);
+            }
+            // alert(cid);
+            // alert(rname);
+
 
             //当页面加载完成之后,调用load方法发送ajax请求加载数据
-            load(cid);
+            load(cid,null,rname);
 
         });
 
-        function load(cid, currentPage) {
+        function load(cid,currentPage,rname) {
             //发送ajax请求,请求route/pageQuery 传递cid
-            $.get("route/pageQuery", {cid: cid, currentPage: currentPage}, function (pb) {
+            $.get("route/pageQuery", {cid: cid, currentPage: currentPage, rname: rname}, function (pb) {
                 //解析pageBean数据,展示到页面上
                 //1.分页数据条的展示
                 //1.1 展示总页码和总页数
@@ -32,13 +48,13 @@
                 $("#totalCount").html(pb.totalCount);
 
                 var lis = "";
-                var firstPage = '<li onclick="javascript:load(' + cid + ',' + 1 + ')" ><a href="javascript:void(0)">首页</a></li>';
+                var firstPage = '<li onclick="javascript:load(' + cid + ',' + 1 + ',\''+ rname +'\')" ><a href="javascript:void(0)">首页</a></li>';
                 //计算上一页的页面
                 var beforeNum = pb.currentPage - 1;
                 if (beforeNum < 1) {
                     beforeNum = 1;
                 }
-                var beforePage = '<li  onclick="javascript:load(' + cid + ',' + beforeNum + ')"  class="threeword"><a href="javascript:void(0)">上一页</a></li>';
+                var beforePage = '<li  onclick="javascript:load(' + cid + ',' + beforeNum + ',\''+ rname + '\')"  class="threeword"><a href="javascript:void(0)">上一页</a></li>';
                 lis += firstPage;
                 lis += beforePage;
                 //1.2 展示分页条数
@@ -75,10 +91,10 @@
                     //当前页码是否等于i
                     var li;
                     if (i == pb.currentPage) {
-                        li = '<li class="curPage" onclick="javascript:load(' + cid + ',' + i + ')"><a href="javascript:void(0)">' + i + '</a></li>';
+                        li = '<li class="curPage" onclick="javascript:load(' + cid + ',' + i + ',\''+ rname +'\')"><a href="javascript:void(0)">' + i + '</a></li>';
                     } else {
                         //创建页码的li
-                        li = '<li onclick="javascript:load(' + cid + ',' + i + ')"><a href="javascript:void(0)">' + i + '</a></li>';
+                        li = '<li onclick="javascript:load(' + cid + ',' + i + ',\''+ rname +'\')"><a href="javascript:void(0)">' + i + '</a></li>';
                     }
                     //拼接字符串
                     lis += li;
@@ -102,8 +118,8 @@
                 if (nextNum > pb.totalPage) {
                     nextNum = pb.totalPage;
                 }
-                var nextPage = '<li onclick="javascript:load(' + cid + ',' + nextNum + ')" class="threeword"><a href="javascript:void(0);">下一页</a></li>';
-                var lastPage = '<li onclick="javascript:load(' + cid + ',' + pb.totalPage + ')" class="threeword"><a href="javascript:void(0);">末页</a></li>';
+                var nextPage = '<li onclick="javascript:load(' + cid + ',' + nextNum + ',\''+ rname +'\')" class="threeword"><a href="javascript:void(0);">下一页</a></li>';
+                var lastPage = '<li onclick="javascript:load(' + cid + ',' + pb.totalPage + ',\''+ rname +'\')" class="threeword"><a href="javascript:void(0);">末页</a></li>';
                 lis += nextPage;
                 lis += lastPage;
                 //将lis中的内容设置到ul中
@@ -160,22 +176,22 @@
                     <span class="jg">价格</span>
                 </div>
                 <ul id="route">
-                    <li>
-                        <div class="img"><img src="images/04-search_03.jpg" alt=""></div>
-                        <div class="text1">
-                            <p>【减100元 含除夕/春节出发】广州增城三英温泉度假酒店/自由行套票</p>
-                            <br/>
-                            <p>1-2月出发，网付立享￥1099/2人起！爆款位置有限，抢完即止！</p>
-                        </div>
-                        <div class="price">
-                            <p class="price_num">
-                                <span>&yen;</span>
-                                <span>299</span>
-                                <span>起</span>
-                            </p>
-                            <p><a href="route_detail.html">查看详情</a></p>
-                        </div>
-                    </li>
+                    <!--<li>-->
+                        <!--<div class="img"><img src="images/04-search_03.jpg" alt=""></div>-->
+                        <!--<div class="text1">-->
+                            <!--<p>【减100元 含除夕/春节出发】广州增城三英温泉度假酒店/自由行套票</p>-->
+                            <!--<br/>-->
+                            <!--<p>1-2月出发，网付立享￥1099/2人起！爆款位置有限，抢完即止！</p>-->
+                        <!--</div>-->
+                        <!--<div class="price">-->
+                            <!--<p class="price_num">-->
+                                <!--<span>&yen;</span>-->
+                                <!--<span>299</span>-->
+                                <!--<span>起</span>-->
+                            <!--</p>-->
+                            <!--<p><a href="route_detail.html">查看详情</a></p>-->
+                        <!--</div>-->
+                    <!--</li>-->
                 </ul>
                 <div class="page_num_inf">
                     <i></i> 共
@@ -183,11 +199,11 @@
                 </div>
                 <div class="pageNum">
                     <ul id="pageNum">
-                        <li><a href="">首页</a></li>
-                        <li class="threeword"><a href="#">上一页</a></li>
-                        <li><a href="#">1</a></li>
-                        <li class="threeword"><a href="javascript:;">下一页</a></li>
-                        <li class="threeword"><a href="javascript:;">末页</a></li>
+                        <!--<li><a href="">首页</a></li>-->
+                        <!--<li class="threeword"><a href="#">上一页</a></li>-->
+                        <!--<li><a href="#">1</a></li>-->
+                        <!--<li class="threeword"><a href="javascript:;">下一页</a></li>-->
+                        <!--<li class="threeword"><a href="javascript:;">末页</a></li>-->
                     </ul>
                 </div>
             </div>
