路由线路详情页实现

--- a/src/main/webapp/route_list.html
+++ b/src/main/webapp/route_list.html
@@ -144,7 +144,7 @@
                         '                                <span>' + route.price + '</span>\n' +
                         '                                <span>起</span>\n' +
                         '                            </p>\n' +
-                        '                            <p><a href="route_detail.html">查看详情</a></p>\n' +
+                        '                            <p><a href="route_detail.html?rid='+ route.rid +'">查看详情</a></p>\n' +
                         '                        </div>\n' +
                         '                    </li>';
 
@@ -195,7 +195,7 @@
                 </ul>
                 <div class="page_num_inf">
                     <i></i> 共
-                    <span id="totalPage">12</span>页<span id="totalCount">132</span>条
+                    <span id="totalPage">0</span>页<span id="totalCount">0</span>条
                 </div>
                 <div class="pageNum">
                     <ul id="pageNum">
